--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+opencv-python-headless
 pandas==1.1.3
 numpy==1.19.2
-opencv-python==4.5.4.58
 streamlit==1.1.0
 tensorflow==2.6.0
 matplotlib==3.3.4
